Feat: Decouple attribute values from attributes in routes, controllers, and services
