# openapi.yaml
@@ -28,6 +28,8 @@ tags:
     description: Endpoints for managing discount coupons.
   - name: Admin Attributes
     description: Endpoints for managing attributes.
+  - name: Admin Attribute Values
+    description: Endpoints for managing attribute values.
   - name: Admin Orders
     description: Endpoints for managing orders.
 externalDocs:
@@ -3124,7 +3126,7 @@ paths:
       tags:
         - Admin Variants
       summary: Get all variants
-      description: 'Retrieves detailed information about all variants. <br> Supports pagination, sorting, and filtering. <br> If `sort` is not provided, the default sort is by `createdAt` in descending order. <br>'
+      description: 'Retrieves detailed information about all variants. <br> Supports pagination, sorting, and filtering. <br> If `sort` is not provided, the default sort is by `createdAt` in descending order. <br> If you want to filter variant by 1 attribute, you can use the [Admin Attributes](#/Admin%20Attributes/get_admin_attributes__attributeID__variants) endpoint. <br> If you want to filter variant by 1 attribute values, you can use the [Admin Attributes](#/Admin%20Attributes/get_admin_attributes__attributeID__values__valueID__variants) endpoint. <br>'
       security:
         - bearerAuth: []
       parameters:
@@ -5134,9 +5136,279 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/error500'
-    post:
+    delete:
       tags:
         - Admin Attributes
+      summary: Delete attribute
+      description: Deletes an attribute and its associated values. Any product variants using this attribute will have the attribute removed.
+      security:
+        - bearerAuth: []
+      parameters:
+        - name: attributeID
+          in: path
+          description: Attribute ID
+          required: true
+          schema:
+            type: string
+            example: '1'
+      responses:
+        '200':
+          description: Attribute deleted
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success:
+                    type: boolean
+                    example: true
+        '401':
+          description: 'Token invalid, not authenticated'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/error401'
+        '403':
+          description: Not an admin
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/error403'
+        '404':
+          description: Attribute Not Found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/error404'
+        '409':
+          description: Attribute in Use
+          content:
+            application/json:
+              schema:
+                $ref: '#/paths/~1auth~1signup/post/responses/409/content/application~1json/schema'
+        '500':
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/error500'
+  '/admin/attributes/{attributeID}/variants':
+    get:
+      tags:
+        - Admin Attributes
+      summary: Get variants which have the attribute
+      description: |
+        Get variants which have the attributeID. <br>
+        Support pagination, sorting and filtering. <br>
+        If `sort` is not provided, the default sort is by `createdAt` in descending order. <br>
+      security:
+        - bearerAuth: []
+      parameters:
+        - name: attributeID
+          in: path
+          description: Attribute ID
+          required: true
+          schema:
+            type: string
+            example: '1'
+        - name: page
+          in: query
+          description: Page to retrieve
+          required: false
+          schema:
+            type: integer
+        - name: size
+          in: query
+          description: Size each page
+          required: false
+          schema:
+            type: integer
+        - name: price
+          in: query
+          description: 'Filter by variants'' price. For more information, see the [Query Number](http://github.com/Tondeptrai23/e-commerce-api/blob/main/src/v2/document/docs/query.md#number-filtering).'
+          required: false
+          schema:
+            example: '[gte]100'
+        - name: stock
+          in: query
+          description: 'Filter by variants'' stock. <br> For more information, see the [Query Number](http://github.com/Tondeptrai23/e-commerce-api/blob/main/src/v2/document/docs/query.md#number-filtering).'
+          required: false
+          schema:
+            example: '[lte]100'
+        - name: createdAt
+          in: query
+          description: 'Filter by variants'' created time. <br> For more information, see the [Query Date](http://github.com/Tondeptrai23/e-commerce-api/blob/main/src/v2/document/docs/query.md#date-filtering).'
+          required: false
+          schema:
+            example: '[gte]2022-01-01'
+        - name: updatedAt
+          in: query
+          description: 'Filter by variants'' updated time. <br> For more information, see the [Query Date](http://github.com/Tondeptrai23/e-commerce-api/blob/main/src/v2/document/docs/query.md#date-filtering).'
+          required: false
+          schema:
+            example: '[gte]2022-01-01'
+        - name: sort
+          in: query
+          description: |
+            Sort by variants' fields. <br>
+            Support fields:`variantID`, `productID`, `price`, `stock`, `createdAt`, `updatedAt`. <br>
+            For more information, see the [Sorting](http://github.com/Tondeptrai23/e-commerce-api/blob/main/src/v2/document/docs/query.md#sorting).
+          required: false
+          schema:
+            example: 'price,-createdAt'
+      responses:
+        '200':
+          description: Variants found
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success:
+                    type: boolean
+                    example: true
+                  variants:
+                    type: array
+                    items:
+                      type: object
+                      allOf:
+                        - $ref: '#/components/schemas/variant'
+                        - $ref: '#/components/schemas/timestamps'
+                        - $ref: '#/components/schemas/variantAttribute'
+                allOf:
+                  - $ref: '#/components/schemas/pagination'
+        '400':
+          description: Invalid request parameters
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/error400'
+        '401':
+          description: 'Token invalid, not authenticated'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/error401'
+        '403':
+          description: Not an admin
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/error403'
+        '404':
+          description: Attribute Not Found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/error404'
+        '500':
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/error500'
+  /admin/attributes/values:
+    get:
+      tags:
+        - Admin Attribute Values
+      summary: Get attribute values
+      description: 'Retrieves a list of all attribute values. <br> Support pagination, sorting and filtering. <br> If `sort` is not provided, the default sort is by `createdAt` in descending order.'
+      security:
+        - bearerAuth: []
+      parameters:
+        - name: page
+          in: query
+          description: Page to retrieve
+          required: false
+          schema:
+            type: integer
+        - name: size
+          in: query
+          description: Size each page
+          required: false
+          schema:
+            type: integer
+        - name: attributeID
+          in: query
+          description: 'Filter by attributeID. <br> For more information, see the [Query String](http://github.com/Tondeptrai23/e-commerce-api/blob/main/src/v2/document/docs/query.md#query-string).'
+          required: false
+          schema:
+            example: '[like]1'
+        - name: value
+          in: query
+          description: 'Filter by value. <br> For more information, see the [Query String](http://github.com/Tondeptrai23/e-commerce-api/blob/main/src/v2/document/docs/query.md#query-string).'
+          required: false
+          schema:
+            example: '[like]value'
+        - name: createdAt
+          in: query
+          description: 'Filter by created time. <br> For more information, see the [Query Date](http://github.com/Tondeptrai23/e-commerce-api/blob/main/src/v2/document/docs/query.md#date-filtering).'
+          required: false
+          schema:
+            example: '[gte]2024-01-01'
+        - name: updatedAt
+          in: query
+          description: 'Filter by updated time. <br> For more information, see the [Query Date](http://github.com/Tondeptrai23/e-commerce-api/blob/main/src/v2/document/docs/query.md#date-filtering).'
+          required: false
+          schema:
+            example: '[gte]2024-01-01'
+        - name: sort
+          in: query
+          required: false
+          description: |
+            Sort by attribute values' fields. <br> 
+            Support fields: `valueID`, `attributeID`, `value`, `createdAt`, `updatedAt`. <br>
+            For more information, see the [Sorting](http://github.com/Tondeptrai23/e-commerce-api/blob/main/src/v2/document/docs/query.md#sorting).
+          schema:
+            example: 'value,-attributeID'
+      responses:
+        '200':
+          description: Attribute values found
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success:
+                    type: boolean
+                    example: true
+                  values:
+                    type: array
+                    items:
+                      type: object
+                      allOf:
+                        - $ref: '#/components/schemas/value'
+                        - $ref: '#/components/schemas/timestamps'
+                  pagination:
+                    $ref: '#/components/schemas/pagination'
+        '400':
+          description: Invalid request parameters
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/error400'
+        '401':
+          description: 'Token invalid, not authenticated'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/error401'
+        '403':
+          description: Not an admin
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/error403'
+        '500':
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/error500'
+  '/admin/attributes/{attributeID}/values':
+    post:
+      tags:
+        - Admin Attribute Values
       summary: Add values to an attribute
       description: |
         Add values to an attribute. 
@@ -5219,11 +5491,12 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/error500'
-    delete:
+  '/admin/attributes/{attributeID}/values/{valueID}':
+    get:
       tags:
-        - Admin Attributes
-      summary: Delete attribute
-      description: Deletes an attribute and its associated values. Any product variants using this attribute will have the attribute removed.
+        - Admin Attribute Values
+      summary: Get attribute value
+      description: Retrieves an attribute value by ID.
       security:
         - bearerAuth: []
       parameters:
@@ -5234,9 +5507,16 @@ paths:
           schema:
             type: string
             example: '1'
+        - name: valueID
+          in: path
+          description: Value ID
+          required: true
+          schema:
+            type: string
+            example: '1'
       responses:
         '200':
-          description: Attribute deleted
+          description: Attribute value retrieved
           content:
             application/json:
               schema:
@@ -5245,6 +5525,11 @@ paths:
                   success:
                     type: boolean
                     example: true
+                  value:
+                    type: object
+                    allOf:
+                      - $ref: '#/components/schemas/value'
+                      - $ref: '#/components/schemas/timestamps'
         '401':
           description: 'Token invalid, not authenticated'
           content:
@@ -5258,27 +5543,20 @@ paths:
               schema:
                 $ref: '#/components/schemas/error403'
         '404':
-          description: Attribute Not Found
+          description: Value Not Found
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/error404'
-        '409':
-          description: Attribute in Use
-          content:
-            application/json:
-              schema:
-                $ref: '#/paths/~1auth~1signup/post/responses/409/content/application~1json/schema'
         '500':
           description: Internal Server Error
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/error500'
-  '/admin/attributes/{attributeID}/values/{valueID}':
     patch:
       tags:
-        - Admin Attributes
+        - Admin Attribute Values
       summary: Update attribute value
       description: |
         Updates the name of an attribute value. <br>
@@ -5364,7 +5642,7 @@ paths:
                 $ref: '#/components/schemas/error500'
     put:
       tags:
-        - Admin Attributes
+        - Admin Attribute Values
       summary: Replace an attribute value
       description: |
         Replace an attribute value by the new value. <br>
@@ -5452,7 +5730,7 @@ paths:
                 $ref: '#/components/schemas/error500'
     delete:
       tags:
-        - Admin Attributes
+        - Admin Attribute Values
       summary: Delete attribute value
       description: Deletes a specific attribute value. This action will remove the value from the attribute and any associated product variants.
       security:
@@ -5513,21 +5791,29 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/error500'
-  '/admin/attributes/{attributeID}/variants':
+  '/admin/attributes/{attributeID}/values/{valueID}/variants':
     get:
       tags:
-        - Admin Attributes
-      summary: Get variants which have the attribute
+        - Admin Attribute Values
+      summary: Get variants which have the attribute value
       description: |
-        Get variants which have the attributeID. <br>
+        Get variants which have the valueID. <br>
         Support pagination, sorting and filtering. <br>
         If `sort` is not provided, the default sort is by `createdAt` in descending order. <br>
+        If you want to filter variants by multiple attribute values, you can use the [Admin Variants](#/Admin%20Variants/get_admin_variants) endpoint. <br>
       security:
         - bearerAuth: []
       parameters:
         - name: attributeID
           in: path
           description: Attribute ID
+          required: true
+          schema:
+            type: string
+            example: '1'
+        - name: valueID
+          in: path
+          description: Value ID
           required: true
           schema:
             type: string
@@ -5546,38 +5832,36 @@ paths:
             type: integer
         - name: price
           in: query
-          description: 'Filter by variants'' price. <br> - Support operators ([lte], [gte], [between]) <br>'
+          description: 'Filter by variants'' price. For more information, see the [Query Number](http://github.com/Tondeptrai23/e-commerce-api/blob/main/src/v2/document/docs/query.md#number-filtering).'
           required: false
           schema:
-            type: string
             example: '[gte]100'
         - name: stock
           in: query
-          description: 'Filter by variants'' stock. <br> - Support operators ([lte], [gte], [between]) <br>'
+          description: 'Filter by variants'' stock. <br> For more information, see the [Query Number](http://github.com/Tondeptrai23/e-commerce-api/blob/main/src/v2/document/docs/query.md#number-filtering).'
           required: false
           schema:
-            type: string
             example: '[lte]100'
         - name: createdAt
           in: query
-          description: 'Filter by variants'' created time. <br> - Support operators ([lte], [gte], [between]) <br>'
+          description: 'Filter by variants'' created time. <br> For more information, see the [Query Date](http://github.com/Tondeptrai23/e-commerce-api/blob/main/src/v2/document/docs/query.md#date-filtering).'
           required: false
           schema:
-            type: string
             example: '[gte]2022-01-01'
         - name: updatedAt
           in: query
-          description: 'Filter by variants'' updated time. <br> - Support operators ([lte], [gte], [between]) <br>'
+          description: 'Filter by variants'' updated time. <br> For more information, see the [Query Date](http://github.com/Tondeptrai23/e-commerce-api/blob/main/src/v2/document/docs/query.md#date-filtering).'
           required: false
           schema:
-            type: string
             example: '[gte]2022-01-01'
         - name: sort
           in: query
-          description: 'Sort by attribute. <br> - Support multiple sort using comma "," <br> - Support descending order using "-" prefix <br>'
+          description: |
+            Sort by variants' fields. <br>
+            Support fields:`variantID`, `productID`, `price`, `stock`, `createdAt`, `updatedAt`. <br>
+            For more information, see the [Sorting](http://github.com/Tondeptrai23/e-commerce-api/blob/main/src/v2/document/docs/query.md#sorting).
           required: false
           schema:
-            type: string
             example: 'price,-createdAt'
       responses:
         '200':
@@ -5597,6 +5881,7 @@ paths:
                       allOf:
                         - $ref: '#/components/schemas/variant'
                         - $ref: '#/components/schemas/timestamps'
+                        - $ref: '#/components/schemas/variantAttribute'
                 allOf:
                   - $ref: '#/components/schemas/pagination'
         '400':
