# src/v2/routes/admin/products/attributes.route.js
@@ -27,79 +27,45 @@ adminAttributeRoute.get(
     attributeController.getAttribute
 );
 
-// adminAttributeRoute.post(
-//     "/attributes",
-//     validator.validateCreateAttribute,
-//     validator.handleValidationErrors,
-//     verifyToken,
-//     isAdmin,
-//     attributeController.createAttribute
-// );
+adminAttributeRoute.post(
+    "/attributes",
+    // validator.validateCreateAttribute,
+    // validator.handleValidationErrors,
+    verifyToken,
+    isAdmin,
+    attributeController.createAttribute
+);
 
-// adminAttributeRoute.patch(
-//     "/attributes/:attributeID",
-//     validator.validatePatchAttribute,
-//     validator.handleValidationErrors,
-//     verifyToken,
-//     isAdmin,
-//     attributeController.renameAttribute
-// );
+adminAttributeRoute.patch(
+    "/attributes/:attributeID",
+    // validator.validatePatchAttribute,
+    // validator.handleValidationErrors,
+    verifyToken,
+    isAdmin,
+    attributeController.renameAttribute
+);
 
-// adminAttributeRoute.put(
-//     "/attributes/:attributeID",
-//     validator.validatePutAttribute,
-//     validator.handleValidationErrors,
-//     verifyToken,
-//     isAdmin,
-//     attributeController.replaceAttribute
-// );
+adminAttributeRoute.put(
+    "/attributes/:attributeID",
+    // validator.validatePutAttribute,
+    // validator.handleValidationErrors,
+    verifyToken,
+    isAdmin,
+    attributeController.replaceAttribute
+);
 
-// adminAttributeRoute.delete(
-//     "/attributes/:attributeID",
-//     verifyToken,
-//     isAdmin,
-//     attributeController.deleteAttribute
-// );
+adminAttributeRoute.delete(
+    "/attributes/:attributeID",
+    verifyToken,
+    isAdmin,
+    attributeController.deleteAttribute
+);
 
-// adminAttributeRoute.post(
-//     "/attributes/:attributeID",
-//     validator.validateCreateAttributeValue,
-//     validator.handleValidationErrors,
-//     verifyToken,
-//     isAdmin,
-//     attributeController.createAttributeValue
-// );
-
-// adminAttributeRoute.patch(
-//     "/attributes/:attributeID/values/:valueID",
-//     validator.validatePatchAttributeValue,
-//     validator.handleValidationErrors,
-//     verifyToken,
-//     isAdmin,
-//     attributeController.renameAttributeValue
-// );
-
-// adminAttributeRoute.put(
-//     "/attributes/:attributeID/values/:valueID",
-//     validator.validatePutAttributeValue,
-//     validator.handleValidationErrors,
-//     verifyToken,
-//     isAdmin,
-//     attributeController.replaceAttributeValue
-// );
-
-// adminAttributeRoute.delete(
-//     "/attributes/:attributeID/values/:valueID",
-//     verifyToken,
-//     isAdmin,
-//     attributeController.deleteAttributeValue
-// );
-
-// adminAttributeRoute.get(
-//     "/attributes/:attributeID/variants",
-//     verifyToken,
-//     isAdmin,
-//     attributeController.getAttributeVariants
-// );
+adminAttributeRoute.get(
+    "/attributes/:attributeID/variants",
+    verifyToken,
+    isAdmin,
+    attributeController.getAttributeVariants
+);
 
 export default adminAttributeRoute;
